--- a/src/app/app.html
+++ b/src/app/app.html
@@ -14,6 +14,9 @@
         <a routerLink="/ranking" routerLinkActive="active">
           <i class="fas fa-trophy me-1"></i>Ranking
         </a>
+        <a routerLink="/discussion" routerLinkActive="active">
+          <i class="fas fa-comments me-1"></i>Foro
+        </a>
         <a routerLink="/admin-login" routerLinkActive="active">
           <i class="fas fa-lock me-1"></i>Admin
         </a>
