Lanzamiento de FORO

--- a/src/app/components/voting/voting.component.html
+++ b/src/app/components/voting/voting.component.html
@@ -7,7 +7,7 @@
         <div class="header-controls">
           <div class="total-votes">
             <i class="fas fa-users"></i>
-            <span>{{ votingStatus.total_votes }} votos</span>
+            <span>{{ votingStatus.total_votes }} votos  (beta) </span>
           </div>
           <button class="refresh-btn" (click)="forceRefresh()" title="Actualizar votos">
             <i class="fas fa-sync-alt"></i>
