--- a/src/app/app.html
+++ b/src/app/app.html
@@ -11,11 +11,11 @@
         <a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
           <i class="fas fa-home me-1"></i>Inicio
         </a>
+        <a routerLink="/discussion" routerLinkActive="active">
+          <i class="fas fa-comments me-1"></i>Foro(beta)
+        </a>
         <a routerLink="/ranking" routerLinkActive="active">
           <i class="fas fa-trophy me-1"></i>Ranking
-        </a>
-        <a routerLink="/discussion" routerLinkActive="active">
-          <i class="fas fa-comments me-1"></i>Foro
         </a>
         <a routerLink="/admin-login" routerLinkActive="active">
           <i class="fas fa-lock me-1"></i>Admin
