--- a/src/app/app.html
+++ b/src/app/app.html
@@ -29,6 +29,9 @@
       <router-outlet></router-outlet>
     </div>
   </main>
+
+  <!-- Chat flotante global -->
+  <app-floating-chat></app-floating-chat>
 </div>
 
 <footer class="now-playing-bar">
