--- a/src/app/app.html
+++ b/src/app/app.html
@@ -12,13 +12,13 @@
           <i class="fas fa-home me-1"></i>Inicio
         </a>
         <a routerLink="/discussion" routerLinkActive="active">
-          <i class="fas fa-comments me-1"></i>Foro(beta)
+          <i class="fas fa-comments me-1"></i>Foro
         </a>
         <a routerLink="/ranking" routerLinkActive="active">
           <i class="fas fa-trophy me-1"></i>Ranking
         </a>
         <a routerLink="/admin-login" routerLinkActive="active">
-          <i class="fas fa-lock me-1"></i>Admin
+          <i class="fas fa-lock me-1"></i>
         </a>
       </nav>
     </div>
