--- a/src/app/components/announcement/announcement.component.html
+++ b/src/app/components/announcement/announcement.component.html
@@ -35,7 +35,7 @@
         </div>
       </div>
       <div class="developer-info">     </div>
-        UptcMusic.com 2025 - V2.8
+        UptcMusic.com 2025 - V3.0
  
       <div class="alert alert-info">
         <h4><i class="fas fa-exclamation-triangle me-2"></i>A nuestros queridos usuarios:</h4>
@@ -47,9 +47,13 @@
 
         <p>-Toda Cacion Reproducida va para Ranking Historico</p>
 
-        <p>-Cancion con menos de 10 votos no se tiene en cuenta para ser reproducidas</p>
+        <p>-Cancion con menos de 5 votos no se tiene en cuenta para ser reproducidas</p>
 
         <p>-Cada semana se eliminaran todas las canciones del Ranking </p>
+
+        <p>No se puede usar Admin como nombre de usuario</p>
+
+        <p>Cualquier hilo que sea ofensivo, se eliminara </p>
 
         <p>-El administrador tiene la potestad de evaluar cada sugerencia y decidir si es apropiada para el momento o
           ambiente.</p>
